--- a/docs/glossary.Rmd
+++ b/docs/glossary.Rmd
@@ -735,6 +735,10 @@ For some of the connectivity metrics (e.g. Focus Area Donors), it is important t
 
 The amount of <a href="" title="Genes, Organisms, Nutrients, Energy">GONE</a> produced in each planning unit (user supplied data).
 
+# Planning area 
+
+The entire spatial domain over which the planning process is occuring. This is synonymous with terms “model domain” or “study area” in other fields. This area is typically subdivided into smaller “Planning Units”
+
 # Planning Units
 
 Spatial sub-units of the entire planning area (*i.e.* domain, or study area). Can be gridded (*e.g.* hexagonal) or feature based (e.g. reefs) as in Marxan.
