--- a/docs/tutorial.Rmd
+++ b/docs/tutorial.Rmd
@@ -61,9 +61,9 @@ Marxan Connect allows users to save Marxan Connect Project files (.MarCon) which
 
 The following section provides examples of possible workflows. It is important to note that these are indeed examples of the software's capabilities and are not intended to be used as scientific advice in a spatial conservation planning process. It is the user's responsibility to ensure that all analysis decisions are valid.
 
-## Demographic Data
+## Demographic Data using CF
 
-Download the example [project folder](https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/remi-daigle/MarxanConnect/tree/master/../data/GBR_demographic_gridded_example). This folder contains the Marxan Connect Project file, the input data, and the output data from this example. Feel free to follow along using Marxan Connect by loading `GBR_demographic_gridded_example.MarCon`.
+Download the example [project folder](https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/remi-daigle/MarxanConnect/tree/master/../docs/tutorial_data/CF_demographic). This folder contains the Marxan Connect Project file, the input data, and the output data from this example. Feel free to follow along using Marxan Connect by loading `GBR_demographic_gridded_example.MarCon`.
 
 Before adding connectivity to the mix, let's have a look at the 'traditional' Marxan files. The files include hexagonal planning units that cover the Great Barrier Reef and we've identified a few bioregion types for which we've set conservation targets.
 
@@ -182,8 +182,8 @@ The connectivity data is at the 'heart' of Marxan Connect's functionality. It al
 For the sake of you web browser, this table only contains the 7 row and columns of the connectivity matrix. The real file has 653 X 653
 
 ```{r}
-# conmat <- read.csv("../data/GBR_demographic_gridded_example/connectivity_matrix.csv")[1:7,1:7]
-# datatable(conmat,rownames = FALSE, options = list(searching = FALSE))
+conmat <- read.csv("tutorial_data/CF_demographic/hexFlow.csv")[1:7,1:7]
+datatable(conmat,rownames = FALSE, options = list(searching = FALSE))
 ```
 
 In this example we've chosen to append the new connectivity based conservation metrics to the existing Marxan files.
@@ -191,15 +191,15 @@ In this example we've chosen to append the new connectivity based conservation m
 ### `spec_appended.dat`
 
 ```{r}
-# spec <- read.csv("../data/GBR_demographic_gridded_example/input/spec_appended.dat")
-# datatable(spec,rownames = FALSE, options = list(searching = FALSE))
+spec <- read.csv("tutorial_data/CF_demographic/input/spec_appended.dat")
+datatable(spec,rownames = FALSE, options = list(searching = FALSE))
 ```
 
 ### `puvspr_appended.dat`
 
 ```{r}
-# puvspr <- read.csv("../data/GBR_demographic_gridded_example/input/puvspr_appended.dat")
-# datatable(puvspr,rownames = FALSE, options = list(searching = FALSE))
+puvspr <- read.csv("tutorial_data/CF_demographic/input/puvspr_appended.dat")
+datatable(puvspr,rownames = FALSE, options = list(searching = FALSE))
 ```
 
 ### `boundary.dat`
@@ -213,75 +213,74 @@ In this example we've chosen to append the new connectivity based conservation m
 Finally, running Marxan with the connectivity conservation features and boundary definitions results in a different solution.
 
 ```{r}
-# # planning units with output
-# output <- read.csv('../data/GBR_demographic_gridded_example/output/pu.csv') %>% 
-#     mutate(geometry=st_as_sfc(geometry,"+proj=longlat +datum=WGS84"),
-#            best_solution = as.logical(best_solution),
-#            fa_included = as.logical(gsub("True",TRUE,.$fa_included)),
-#            aa_included = as.logical(gsub("True",TRUE,.$aa_included)),
-#            status = as.character(status)) %>% 
-#     st_as_sf()
+# planning units with output
+output <- read.csv("tutorial_data/CF_demographic/output/pu_connect.csv") %>%
+    mutate(geometry=st_as_sfc(geometry,"+proj=longlat +datum=WGS84"),
+           best_solution = as.logical(best_solution),
+           fa_included = as.logical(gsub("True",TRUE,.$fa_included)),
+           aa_included = as.logical(gsub("True",TRUE,.$aa_included))) %>%
+    st_as_sf()
 
 ```
 
 
 ```{r,warning=FALSE,message=FALSE}
-# map <- leaflet(output) %>% 
-#     addTiles()
-# 
-# groups <- names(output)[c(-1,-2,-length(names(output)))]
-# 
-# for(i in groups){
-#     z <- unlist(data.frame(output)[i])
-#     if(is.numeric(z)){
-#         pal <- colorBin("YlOrRd", domain = z)
-#     }else{
-#         pal <- colorFactor("YlOrRd", domain = z)
-#     }
-#     
-#     map = map %>%
-#         addPolygons(fillColor = ~pal(z),
-#                     fillOpacity = 0.6,
-#                     weight=0.5,
-#                     color="white",
-#                     group=i,
-#                     label = as.character(z)) %>%
-#             addLegend(pal = pal,
-#                       values = z,
-#                       title = i,
-#                       group = i,
-#                       position="bottomleft") 
-#     
-#     
-# }
-# map <- map %>% 
-#     addLayersControl(overlayGroups  = groups,
-#                      options = layersControlOptions(collapsed = FALSE))
-# 
-# for(i in groups){
-#     map <- map %>% hideGroup(i)
-# }
-# map %>% 
-#     showGroup("select_freq")
-# ```
-# 
-# ### Gridded Marxan Analysis
-# 
-# ### Feature Based Marxan Analysis
-# 
-# ## Landscape Data
-# 
-# 
-# ```{r plot shape,results='hide'}
-# habitats <- st_read('../data/shapefiles/habitat.shp') %>% 
-#     st_transform(proj)
-# ```
-# 
-# 
-# ```{r}
-# p <- tm_shape(habitats) +
-#     tm_fill("habitat",title="Habitat Type") 
-# tmap_leaflet(p)
+map <- leaflet(output) %>%
+    addTiles()
+
+groups <- names(output)[c(-1,-2,-length(names(output)))]
+
+for(i in groups){
+    z <- unlist(data.frame(output)[i])
+    if(is.numeric(z)){
+        pal <- colorBin("YlOrRd", domain = z)
+    }else{
+        pal <- colorFactor("YlOrRd", domain = z)
+    }
+
+    map = map %>%
+        addPolygons(fillColor = ~pal(z),
+                    fillOpacity = 0.6,
+                    weight=0.5,
+                    color="white",
+                    group=i,
+                    label = as.character(z)) %>%
+            addLegend(pal = pal,
+                      values = z,
+                      title = i,
+                      group = i,
+                      position="bottomleft")
+
+
+}
+map <- map %>%
+    addLayersControl(overlayGroups  = groups,
+                     options = layersControlOptions(collapsed = FALSE))
+
+for(i in groups){
+    map <- map %>% hideGroup(i)
+}
+map %>%
+    showGroup("select_freq")
+```
+
+### Gridded Marxan Analysis
+
+### Feature Based Marxan Analysis
+
+## Landscape Data
+
+
+```{r plot shape,results='hide'}
+habitats <- st_read('../data/shapefiles/habitat.shp') %>%
+    st_transform(proj)
+```
+
+
+```{r}
+p <- tm_shape(habitats) +
+    tm_fill("habitat",title="Habitat Type")
+tmap_leaflet(p)
 ```
 
 
