Working on tutorial for CSM_landscape
This part does not work yet.

--- a/docs/tutorial.Rmd
+++ b/docs/tutorial.Rmd
@@ -568,14 +568,254 @@ Here is the output of our example with no connectivity
 #     showGroup("select_freq")
 ```
 
+## Landscape Data using CSM
+
+Download the example [project folder](https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/remi-daigle/MarxanConnect/tree/master/../docs/tutorial_data/CSM_landscape). This folder contains the Marxan Connect Project file, the input data, and the output data from this example. Feel free to follow along using Marxan Connect by loading `tutorial.MarCon`.
+
+Before adding connectivity to the mix, let's have a look at the 'traditional' Marxan files. The files include hexagonal planning units that cover the Great Barrier Reef and we've identified a few bioregion types for which we've set conservation targets.
+
+### `spec.dat`
+
+```{r}
+spec <- read.csv("tutorial_data/CSM_landscape/input/spec.dat")
+datatable(spec,rownames = FALSE, options = list(searching = FALSE))
+```
+
+### `puvspr.dat`
+
+```{r}
+puvspr <- read.csv("tutorial_data/CSM_landscape/input/puvspr.dat")
+datatable(puvspr,rownames = FALSE, options = list(searching = FALSE))
+```
+
+### `pu.dat`
+
+```{r}
+pu <- read.csv("tutorial_data/CSM_landscape/input/pu.dat")
+datatable(pu,rownames = FALSE, options = list(searching = FALSE))
+```
+
+### Inital Conservation Features
+
+```{r}
+puvspr_wide <- puvspr %>%
+    left_join(select(spec,"id","name"),
+              by=c("species"="id")) %>%
+    select(-species) %>%
+    spread(key="name",value="amount")
+
+# planning units with output
+output <- read.csv("tutorial_data/CSM_landscape/output/pu_connect.csv") %>%
+    mutate(geometry=st_as_sfc(geometry,"+proj=longlat +datum=WGS84"),
+           best_solution = as.logical(best_solution)) %>%
+    st_as_sf() %>%
+    left_join(puvspr_wide,by=c("FID"="pu"))
+
+```
+
+```{r,warning=FALSE,message=FALSE}
+map <- leaflet(output) %>%
+    addTiles()
+
+groups <- names(select(output,-best_solution,-select_freq))[c(-1,-2,-length(names(output)))]
+
+for(i in groups){
+    z <- unlist(data.frame(output)[i])
+    if(is.numeric(z)){
+        pal <- colorBin("YlOrRd", domain = z)
+    }else{
+        pal <- colorFactor("YlOrRd", domain = z)
+    }
+
+    map = map %>%
+        addPolygons(fillColor = ~pal(z),
+                    fillOpacity = 0.6,
+                    weight=0.5,
+                    color="white",
+                    group=i,
+                    label = as.character(z)) %>%
+            addLegend(pal = pal,
+                      values = z,
+                      title = i,
+                      group = i,
+                      position="bottomleft")
 
 
+}
+map <- map %>%
+    addLayersControl(overlayGroups  = groups,
+                     options = layersControlOptions(collapsed = FALSE))
 
-### Gridded Marxan Analysis
+for(i in groups){
+    map <- map %>% hideGroup(i)
+}
+map %>%
+    showGroup("BIORE_102")
+```
 
-### Feature Based Marxan Analysis
+### Adding Connectivity
 
-## Landscape Data
+Let's begin by examining the spatial layers we've added in order to incorporate connectivity into the Marxan analysis. Marxan Connect needs a shapefile for the [planning units](glossary.html#5_planning_units), the [focus areas](glossary.html#4_focus_areas), and the [avoidance areas](glossary.html#4_focus_areas).
+
+```{r load all layers for CSM_landscape,results='hide'}
+# planning units
+pu <- st_read("tutorial_data/CSM_landscape/hex_planning_units.shp") %>% 
+    st_transform(proj)
+
+#focus areas (IUCN level I or II protected areas)
+fa <- st_read("tutorial_data/CSM_landscape/IUCN_IorII.shp") %>%
+    st_transform(proj)
+
+# avoidance areas (ports)
+aa <- st_read("tutorial_data/CSM_landscape/ports.shp") %>%
+    st_transform(proj)
+```
+
+```{r}
+p <- qtm(pu,fill = '#7570b3') +
+    qtm(fa,fill = '#1b9e77') +
+    qtm(aa,fill = '#d95f02')
+tmap_leaflet(p) %>%
+    addLegend(position = "topright",
+              labels = c("Planning Units","Focus Areas (IUCN I or II)","Avoidance Areas (ports)"),
+              colors = c("#7570b3","#1b9e77","#d95f02"),
+              title = "Layers")
+```
+
+### `connectivity_matrix.csv`
+
+The connectivity data is at the 'heart' of Marxan Connect's functionality. It allows the generation of new conservation features based on connectivity metrics.
+
+For the sake of you web browser, this table only contains the 7 row and columns of the connectivity matrix. The real file has 653 X 653
+
+```{r}
+conmat <- read.csv("tutorial_data/CSM_landscape/hexFlow.csv")[1:7,1:7]
+datatable(conmat,rownames = FALSE, options = list(searching = FALSE))
+```
+
+In this example we've chosen to append the new connectivity based conservation metrics to the existing Marxan files.
+
+### `spec_appended.dat`
+
+```{r}
+spec <- read.csv("tutorial_data/CSM_landscape/input/spec_appended.dat")
+datatable(spec,rownames = FALSE, options = list(searching = FALSE))
+```
+
+### `puvspr_appended.dat`
+
+```{r}
+puvspr <- read.csv("tutorial_data/CSM_landscape/input/puvspr_appended.dat")
+datatable(puvspr,rownames = FALSE, options = list(searching = FALSE))
+```
+
+Finally, running Marxan with the connectivity conservation features and boundary definitions results in a different solution.
+
+```{r}
+# planning units with output
+output <- read.csv("tutorial_data/CSM_landscape/output/pu_connect.csv") %>%
+    mutate(geometry=st_as_sfc(geometry,"+proj=longlat +datum=WGS84"),
+           best_solution = as.logical(best_solution),
+           fa_included = as.logical(gsub("True",TRUE,.$fa_included)),
+           aa_included = as.logical(gsub("True",TRUE,.$aa_included))) %>%
+    st_as_sf()
+
+```
+
+
+```{r,warning=FALSE,message=FALSE}
+map <- leaflet(output) %>%
+    addTiles()
+
+groups <- names(output)[c(-1,-2,-length(names(output)))]
+
+for(i in groups){
+    z <- unlist(data.frame(output)[i])
+    if(is.numeric(z)){
+        pal <- colorBin("YlOrRd", domain = z)
+    }else{
+        pal <- colorFactor("YlOrRd", domain = z)
+    }
+
+    map = map %>%
+        addPolygons(fillColor = ~pal(z),
+                    fillOpacity = 0.6,
+                    weight=0.5,
+                    color="white",
+                    group=i,
+                    label = as.character(z)) %>%
+            addLegend(pal = pal,
+                      values = z,
+                      title = i,
+                      group = i,
+                      position="bottomleft")
+
+
+}
+map <- map %>%
+    addLayersControl(overlayGroups  = groups,
+                     options = layersControlOptions(collapsed = FALSE))
+
+for(i in groups){
+    map <- map %>% hideGroup(i)
+}
+map %>%
+    showGroup("select_freq")
+```
+
+Here is the output of our example with no connectivity for comparison.
+
+```{r}
+# planning units with output
+output <- read.csv("tutorial_data/CSM_landscape/output/pu_no_connect.csv") %>%
+    mutate(geometry=st_as_sfc(geometry,"+proj=longlat +datum=WGS84"),
+           best_solution = as.logical(best_solution),
+           fa_included = as.logical(gsub("True",TRUE,.$fa_included)),
+           aa_included = as.logical(gsub("True",TRUE,.$aa_included))) %>%
+    st_as_sf()
+
+```
+
+
+```{r,warning=FALSE,message=FALSE}
+map <- leaflet(output) %>%
+    addTiles()
+
+groups <- names(output)[c(-1,-2,-length(names(output)))]
+
+for(i in groups){
+    z <- unlist(data.frame(output)[i])
+    if(is.numeric(z)){
+        pal <- colorBin("YlOrRd", domain = z)
+    }else{
+        pal <- colorFactor("YlOrRd", domain = z)
+    }
+
+    map = map %>%
+        addPolygons(fillColor = ~pal(z),
+                    fillOpacity = 0.6,
+                    weight=0.5,
+                    color="white",
+                    group=i,
+                    label = as.character(z)) %>%
+            addLegend(pal = pal,
+                      values = z,
+                      title = i,
+                      group = i,
+                      position="bottomleft")
+
+
+}
+map <- map %>%
+    addLayersControl(overlayGroups  = groups,
+                     options = layersControlOptions(collapsed = FALSE))
+
+for(i in groups){
+    map <- map %>% hideGroup(i)
+}
+map %>%
+    showGroup("select_freq")
+```
 
 
 ```{r plot shape,results='hide'}
