--- a/docs/tutorial.Rmd
+++ b/docs/tutorial.Rmd
@@ -605,7 +605,7 @@ puvspr_wide <- puvspr %>%
     spread(key="name",value="amount")
 
 # planning units with output
-output <- read.csv("tutorial_data/CSM_landscape/output/pu_connect.csv") %>%
+output <- read.csv("tutorial_data/CSM_landscape/output/pu_no_connect.csv") %>%
     mutate(geometry=st_as_sfc(geometry,"+proj=longlat +datum=WGS84"),
            best_solution = as.logical(best_solution)) %>%
     st_as_sf() %>%
@@ -689,7 +689,7 @@ The connectivity data is at the 'heart' of Marxan Connect's functionality. It al
 For the sake of you web browser, this table only contains the 7 row and columns of the connectivity matrix. The real file has 653 X 653
 
 ```{r}
-conmat <- read.csv("tutorial_data/CSM_landscape/hexFlow.csv")[1:7,1:7]
+conmat <- read.csv("tutorial_data/CSM_landscape/IsolationByDistance.csv")[1:7,]
 datatable(conmat,rownames = FALSE, options = list(searching = FALSE))
 ```
 
@@ -698,14 +698,14 @@ In this example we've chosen to append the new connectivity based conservation m
 ### `spec_appended.dat`
 
 ```{r}
-spec <- read.csv("tutorial_data/CSM_landscape/input/spec_appended.dat")
+spec <- read.csv("tutorial_data/CSM_landscape/input/spec.dat")
 datatable(spec,rownames = FALSE, options = list(searching = FALSE))
 ```
 
 ### `puvspr_appended.dat`
 
 ```{r}
-puvspr <- read.csv("tutorial_data/CSM_landscape/input/puvspr_appended.dat")
+puvspr <- read.csv("tutorial_data/CSM_landscape/input/puvspr.dat")
 datatable(puvspr,rownames = FALSE, options = list(searching = FALSE))
 ```
 
@@ -716,8 +716,9 @@ Finally, running Marxan with the connectivity conservation features and boundary
 output <- read.csv("tutorial_data/CSM_landscape/output/pu_connect.csv") %>%
     mutate(geometry=st_as_sfc(geometry,"+proj=longlat +datum=WGS84"),
            best_solution = as.logical(best_solution),
-           fa_included = as.logical(gsub("True",TRUE,.$fa_included)),
-           aa_included = as.logical(gsub("True",TRUE,.$aa_included))) %>%
+           # fa_included = as.logical(gsub("True",TRUE,.$fa_included)),
+           # aa_included = as.logical(gsub("True",TRUE,.$aa_included))
+           ) %>%
     st_as_sf()
 
 ```
@@ -770,8 +771,9 @@ Here is the output of our example with no connectivity for comparison.
 output <- read.csv("tutorial_data/CSM_landscape/output/pu_no_connect.csv") %>%
     mutate(geometry=st_as_sfc(geometry,"+proj=longlat +datum=WGS84"),
            best_solution = as.logical(best_solution),
-           fa_included = as.logical(gsub("True",TRUE,.$fa_included)),
-           aa_included = as.logical(gsub("True",TRUE,.$aa_included))) %>%
+           # fa_included = as.logical(gsub("True",TRUE,.$fa_included)),
+           # aa_included = as.logical(gsub("True",TRUE,.$aa_included))
+           ) %>%
     st_as_sf()
 
 ```
